fix: overlap bug

--- a/src/components/Taskbar/taskbar.module.scss
+++ b/src/components/Taskbar/taskbar.module.scss
@@ -33,53 +33,52 @@
     .tabs {
         flex: 1;
         display: flex;
-    }
 
-    .tab {
-        position: relative;
-        height: 100%;
-        width: 160px;
-        padding: 0 var(--spacing-small);
-
-        color: white;
-        z-index: 1;
-        display: flex;
-        justify-content: center;
-
-        figure {
-            flex: 1;
-        }
-
-        &::before {
-            content: "";
-            position: absolute;
-            bottom: 0px;
-            width: calc(100% - 8px);
-            height: 0px;
-            margin: 0 4px;
-
-            background-color: var(--color-secondary);
-            z-index: -1;
-
-            transition: width 0.1s;
-
-            border-bottom: 2px solid var(--color-accent);
-        }
-        &:hover::before {
-            width: 100%;
+        .tab {
+            position: relative;
             height: 100%;
-            margin: 0;
-        }
-
-        figure {
-            height: 100%;
+            width: 160px;
+            padding: 0 var(--spacing-small);
 
             display: flex;
-            align-items: center;
-            gap: var(--spacing-small);
-        }
-        img {
-            width: var(--size-icon-small);
+            justify-content: center;
+
+            color: white;
+
+            z-index: 1;
+
+            &::before {
+                content: "";
+                position: absolute;
+                bottom: 0px;
+                width: calc(100% - 8px);
+                height: 0px;
+                margin: 0 4px;
+
+                background-color: var(--color-secondary);
+                border-bottom: 2px solid var(--color-accent);
+                z-index: -1;
+
+                transition: width 0.1s;
+            }
+            &:hover::before {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+            }
+
+            figure {
+                flex: 1;
+                height: 100%;
+
+                display: flex;
+                align-items: center;
+                gap: var(--spacing-small);
+            }
+            img {
+                width: var(--size-icon-small);
+            }
         }
     }
+
 }
